force-app/main/default/objects/LID__User_OAuth__c/LID__User_OAuth__c.object-meta.xml
<CustomObject>
    <description>This object stores access tokens, a refresh token, and Time To Live of the tokens for a particular user for LinkedIn Sales Navigator</description>
    <label>User OAuth</label>
    <nameField>
        <displayFormat>LSNOAT-{00000}</displayFormat>
        <label>User OAuth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User OAuths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>