force-app/main/default/objects/LID__User_OAuth__c/fields/LID__Refresh_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LID__Refresh_Expiration__c</fullName>
    <label>Refresh Expiration</label>
    <type>DateTime</type>
</CustomField>