force-app/main/default/objects/LID__User_OAuth__c/fields/LID__Refresh_Expired__c.field-meta.xml
<CustomField>
    <fullName>LID__Refresh_Expired__c</fullName>
    <formula>LID__Refresh_Expiration__c &lt;  NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Expired</label>
    <type>Checkbox</type>
</CustomField>