force-app/main/default/objects/LID__User_OAuth__c/fields/LID__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>LID__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>