force-app/main/default/objects/LID__User_OAuth__c/fields/LID__Sales_Access_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LID__Sales_Access_Expiration__c</fullName>
    <label>Sales Access Expiration</label>
    <type>DateTime</type>
</CustomField>