force-app/main/default/objects/LID__User_OAuth__c/fields/LID__Sales_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>LID__Sales_Access_Token__c</fullName>
    <label>Sales Access Token</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>