force-app/main/default/objects/LID__User_OAuth__c/fields/LID__User__c.field-meta.xml
<CustomField>
    <fullName>LID__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_OAuths</relationshipName>
    <type>Lookup</type>
</CustomField>